deploy: 094ba040b068d736387a46a3073685a8754ec651

--- a/configuration.html
+++ b/configuration.html
@@ -230,8 +230,8 @@ The key <code class="docutils literal notranslate"><span class="pre">model_param
   <span class="c1"># Specify path to Parent Directory of Trained Model </span>
   <span class="n">trained_model_path</span><span class="p">:</span> <span class="o">&lt;/</span><span class="n">path</span><span class="o">/</span><span class="n">to</span><span class="o">/</span><span class="n">parent</span><span class="o">/</span><span class="n">directory</span><span class="o">/</span><span class="n">of</span><span class="o">/</span><span class="n">trained</span><span class="o">/</span><span class="n">model</span><span class="o">&gt;</span>
 
-  <span class="c1"># Path to Trained Model Config file inside /trained_model_path/ parent directory</span>
-  <span class="n">trained_model_config</span><span class="p">:</span> <span class="o">&lt;/</span><span class="n">path</span><span class="o">/</span><span class="n">to</span><span class="o">/</span><span class="n">trained</span><span class="o">/</span><span class="n">model</span><span class="o">/</span><span class="n">config</span><span class="o">/</span><span class="n">file</span><span class="o">&gt;</span>
+  <span class="c1"># Name of the Trained Model Config file stored in config sub-directory in the trained_model_path parent directory</span>
+  <span class="n">trained_model_config</span><span class="p">:</span> <span class="o">&lt;</span><span class="n">enter</span> <span class="n">name</span> <span class="n">of</span> <span class="n">trained</span> <span class="n">model</span> <span class="n">config</span> <span class="n">file</span><span class="o">&gt;</span>
   
   <span class="c1">#Evaluate the monchromatic RMSE metric.</span>
   <span class="n">eval_mono_metric_rmse</span><span class="p">:</span> <span class="kc">True</span>
