--- a/genindex.html
+++ b/genindex.html
@@ -249,6 +249,8 @@
         <li><a href="wf_psf.psf_models.tf_psf_field.html#wf_psf.psf_models.tf_psf_field.TF_physical_poly_field.compute_zernikes">(wf_psf.psf_models.tf_psf_field.TF_physical_poly_field method)</a>
 </li>
       </ul></li>
+      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.ConfigParameterError">ConfigParameterError</a>
+</li>
       <li><a href="wf_psf.utils.utils.html#wf_psf.utils.utils.convert_to_tf">convert_to_tf() (in module wf_psf.utils.utils)</a>
 </li>
       <li><a href="wf_psf.utils.io.html#wf_psf.utils.io.FileIOHandler.copy_conffile_to_output_dir">copy_conffile_to_output_dir() (wf_psf.utils.io.FileIOHandler method)</a>
@@ -265,6 +267,8 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler.data_conf">data_conf (wf_psf.utils.configs_handler.MetricsConfigHandler property)</a>
+</li>
       <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.DataConfigHandler">DataConfigHandler (class in wf_psf.utils.configs_handler)</a>
 </li>
       <li><a href="wf_psf.utils.utils.html#wf_psf.utils.utils.decimate_im">decimate_im() (in module wf_psf.utils.utils)</a>
@@ -393,7 +397,7 @@
 </li>
       <li><a href="wf_psf.utils.io.html#wf_psf.utils.io.FileIOHandler.get_psf_model_dir">get_psf_model_dir() (wf_psf.utils.io.FileIOHandler method)</a>
 </li>
-      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler.get_psf_model_weights_filepath">get_psf_model_weights_filepath() (wf_psf.utils.configs_handler.MetricsConfigHandler method)</a>
+      <li><a href="wf_psf.psf_models.psf_models.html#wf_psf.psf_models.psf_models.get_psf_model_weights_filepath">get_psf_model_weights_filepath() (in module wf_psf.psf_models.psf_models)</a>
 </li>
       <li><a href="wf_psf.sims.SimPSFToolkit.html#wf_psf.sims.SimPSFToolkit.SimPSFToolkit.get_radial_idx">get_radial_idx() (wf_psf.sims.SimPSFToolkit.SimPSFToolkit static method)</a>
 </li>
@@ -500,6 +504,10 @@
       <li><a href="wf_psf.plotting.plots_interface.html#wf_psf.plotting.plots_interface.make_plot">make_plot() (in module wf_psf.plotting.plots_interface)</a>
 </li>
       <li><a href="wf_psf.utils.read_config.html#wf_psf.utils.read_config.RecursiveNamespace.map_entry">map_entry() (wf_psf.utils.read_config.RecursiveNamespace static method)</a>
+</li>
+      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler.metrics_conf">metrics_conf (wf_psf.utils.configs_handler.MetricsConfigHandler property)</a>
+</li>
+      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler.metrics_dir">metrics_dir (wf_psf.utils.configs_handler.MetricsConfigHandler property)</a>
 </li>
       <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler">MetricsConfigHandler (class in wf_psf.utils.configs_handler)</a>
 </li>
@@ -648,6 +656,8 @@
 </li>
       <li><a href="wf_psf.sims.SimPSFToolkit.html#wf_psf.sims.SimPSFToolkit.SimPSFToolkit.plot_z_coeffs">plot_z_coeffs() (wf_psf.sims.SimPSFToolkit.SimPSFToolkit method)</a>
 </li>
+      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler.plotting_conf">plotting_conf (wf_psf.utils.configs_handler.MetricsConfigHandler property)</a>
+</li>
       <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.PlottingConfigHandler">PlottingConfigHandler (class in wf_psf.utils.configs_handler)</a>
 </li>
       <li><a href="wf_psf.psf_models.tf_layers.html#wf_psf.psf_models.tf_layers.TF_NP_GRAPH_OPD.predict">predict() (wf_psf.psf_models.tf_layers.TF_NP_GRAPH_OPD method)</a>
@@ -704,6 +714,8 @@
         <li><a href="wf_psf.psf_models.tf_psf_field.html#wf_psf.psf_models.tf_psf_field.TF_SemiParam_field.project_DD_features">(wf_psf.psf_models.tf_psf_field.TF_SemiParam_field method)</a>
 </li>
       </ul></li>
+      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler.psf_model">psf_model (wf_psf.utils.configs_handler.MetricsConfigHandler property)</a>
+</li>
       <li><a href="wf_psf.sims.SimPSFToolkit.html#wf_psf.sims.SimPSFToolkit.SimPSFToolkit.psf_plotter">psf_plotter() (wf_psf.sims.SimPSFToolkit.SimPSFToolkit static method)</a>
 </li>
       <li><a href="wf_psf.psf_models.psf_models.html#wf_psf.psf_models.psf_models.PsfModelError">PsfModelError</a>
@@ -872,10 +884,10 @@
 </li>
       <li><a href="wf_psf.psf_models.tf_psf_field.html#wf_psf.psf_models.tf_psf_field.TF_physical_poly_field">TF_physical_poly_field (class in wf_psf.psf_models.tf_psf_field)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wf_psf.psf_models.tf_layers.html#wf_psf.psf_models.tf_layers.TF_poly_Z_field">TF_poly_Z_field (class in wf_psf.psf_models.tf_layers)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="wf_psf.psf_models.psf_model_parametric.html#wf_psf.psf_models.psf_model_parametric.TF_PSF_field_model">TF_PSF_field_model (class in wf_psf.psf_models.psf_model_parametric)</a>
 
       <ul>
@@ -902,6 +914,8 @@
 </li>
       <li><a href="wf_psf.training.train.html#wf_psf.training.train.train">train() (in module wf_psf.training.train)</a>
 </li>
+      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler.training_conf">training_conf (wf_psf.utils.configs_handler.MetricsConfigHandler property)</a>
+</li>
       <li><a href="wf_psf.training.train.html#wf_psf.training.train.TrainingParamsHandler.training_hparams">training_hparams (wf_psf.training.train.TrainingParamsHandler property)</a>
 </li>
       <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.TrainingConfigHandler">TrainingConfigHandler (class in wf_psf.utils.configs_handler)</a>
@@ -916,6 +930,10 @@
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler.weights_basename_filepath">weights_basename_filepath (wf_psf.utils.configs_handler.MetricsConfigHandler property)</a>
+</li>
+      <li><a href="wf_psf.utils.configs_handler.html#wf_psf.utils.configs_handler.MetricsConfigHandler.weights_path">weights_path (wf_psf.utils.configs_handler.MetricsConfigHandler property)</a>
+</li>
       <li>
     wf_psf
 
